erDiagram
  DESIGNERS ||--o{ SESSIONS : owns
  CONFIGS ||--o{ SESSIONS : selected_in
  CONFIGS ||--o{ STAGES : defines
  STAGES ||--o{ HELPERS : has
  STAGES ||--o{ TOKEN_RULES : uses
  CONFIGS ||--o{ DECISIONS : logs
  STAGES ||--o{ DECISIONS : targets
  SESSIONS ||--o{ EVENTS : contains
  EVENTS ||--o{ ANOMALIES : flags

  DESIGNERS {
    string user_id
    string username
    string password_hash
    string created_at
  }
  SESSIONS {
    string session_id
    string user_id
    string config_id
    string start_time
    string end_time
    string outcome
    int total_time_seconds
    int total_fails
    int total_tokens_spent
    int stages_completed
  }
  EVENTS {
    string event_id
    string session_id
    string user_id
    string timestamp
    int stage_id
    string config_id
    string event_type
    string payload
    int is_valid
  }
  ANOMALIES {
    string anomaly_id
    string event_id
    string anomaly_type
    string detected_by
    string resolution_status
    string created_at
    string details
  }
  CONFIGS {
    string config_id
    string label
    int start_tokens
  }
  STAGES {
    int stage_id
    string config_id
    int grid_rows
    int grid_cols
    int card_count
    int timer_seconds
    int move_limit
    int mismatch_penalty_seconds
  }
  HELPERS {
    int stage_id
    string config_id
    string helper_key
    int cost
    int effect_seconds
  }
  TOKEN_RULES {
    int stage_id
    string config_id
    int per_match
    int on_complete
  }
  DECISIONS {
    string decision_id
    string config_id
    int stage_id
    string change_json
    string rationale
    string evidence_links
    string timestamp
  }
